--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title></title>
   </head>
   <body>
+
+
     <header>
       <div class="head-principle">
         <h1>blinder</h1>
@@ -16,9 +18,9 @@
         <img src="img/apple.png" alt="">
         <img src="img/gplay.png" alt="">
       </div>
-
       <img class="screen1" src="img/iphone_1.png" alt="">
     </header>
+    <img class="bg_header" src="img/bg_header.jpg" alt="">
 
     <main>
       <section class="question">
@@ -38,7 +40,7 @@
         <p>Meet new people by affinity</p>
       </section>
 
-      <img src="img/iphone_2.png" alt="">
+      <img class="screen2" src="img/iphone_2.png" alt="">
       <span class=button>Stay informed</span>
     </main>
 
