--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="jquery/jquery.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700" rel="stylesheet">
     <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
 
