--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <header>
       <div class="head-principle">
         <h1>blinder</h1>
-        <p>Meet people blindly</p>
+        <h2>Meet people blindly</h2>
+        <p>We know your time is valuable, so tell us your preferences and we’ll handle the scouting–and the vetting–for you.</p>
         <img src="img/apple.png" alt="">
         <img src="img/gplay.png" alt="">
       </div>
@@ -28,18 +29,18 @@
         <h2>Do you want to date someone who share your interests?</h2>
       </section>
 
-      <section class="arguments">
+      <div class="arguments">
         <img src="img/icon_unveil.png" alt="">
         <p>Unveil your user image profile as you define your features.</p>
-      </section>
-      <section class="arguments">
+      </div>
+      <div class="arguments">
         <img src="img/icon_preferences.png" alt="">
         <p>Tell us your preferences</p>
-      </section>
-      <section class="arguments">
+      </div>
+      <div class="arguments">
         <img src="img/icon_meet.png" alt="">
         <p>Meet new people by affinity</p>
-      </section>
+      </div>
 
       <img class="screen2" src="img/iphone_2.png" alt="">
       <span class=button>Stay informed</span>
