--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <img src="img/icon_twitter.png" alt="">
       </div>
       <form class="" action="index.html" method="post">
-        <label for=""><strong>Newslatter</strong> subscription</label>
+        <label for=""><strong>Newslatter</strong> subscription</label><br />
         <input type="text" name="" value="">
         <button type="button" name="button">Send</button>
       </form>
